# notion_scripts

./: .gitignore  Makefile  README.md  config.toml.example  pyproject.toml
notion_scripts/: __init__.py  cli.py  config.py  logging.py
notion_scripts/booklist_info/: __init__.py
