[tool.poetry]
name = "notion_scripts"
version = "0.1.0"
description = "A collection of miscellaneous notion scripts"
authors = ["Evan Smith <me@iamevan.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
notion = "^0.0.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
