[tool.poetry]
name = "notion_scripts"
version = "0.1.0"
description = "A collection of miscellaneous notion scripts"
authors = ["Evan Smith <me@iamevan.me>"]
license = "MIT"

[tool.poetry.scripts]
notion_scripts = "notion_scripts:main"

[tool.poetry.dependencies]
python = "3.7.7"
notion = "^0.0.25"
click = "^7.1.2"
marshmallow = "^3.9.1"
goodreads_api_client = "^0.1.0-alpha.4"
colorlog = "^4.6.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
